--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -61,7 +61,8 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:text="Change Password"
+        android:text="Reset Password"
+        android:onClick="resetPassword"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
