--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,7 +51,7 @@
                     <ImageView
                         android:id="@+id/imageView5"
                         android:layout_width="match_parent"
-                        android:layout_height="420dp"
+                        android:layout_height="424dp"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/food_image_1" />
 
@@ -63,7 +65,7 @@
             </ScrollView>
 
             <TextView
-                android:id="@+id/test"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="#F44336"
