--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -40,13 +40,21 @@
             android:orientation="vertical">
 
             <ScrollView
-                android:layout_width="match_parent"
+                android:layout_width="420dp"
                 android:layout_height="420dp">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="424dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/food_image_1" />
 
                     <ImageView
                         android:id="@+id/imageView5"
@@ -56,11 +64,13 @@
                         app:srcCompat="@drawable/food_image_1" />
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/imageView6"
                         android:layout_width="match_parent"
-                        android:layout_height="420dp"
+                        android:layout_height="424dp"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/food_image_1" />
+
+
                 </LinearLayout>
             </ScrollView>
 
