--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -68,33 +68,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changeUsernameText" />
 
-    <Button
+    <TextView
         android:id="@+id/changeEmail"
-        android:layout_width="278dp"
-        android:layout_height="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:onClick="toChangeEmail"
         android:text="Change Email Address"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changePasswordText" />
 
-    <Button
+    <TextView
         android:id="@+id/setDistance"
-        android:layout_width="278dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="75dp"
         android:ems="10"
         android:onClick="toSetDistance"
         android:text="Change Distance"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/changeNotifications"
         app:layout_constraintStart_toStartOf="parent"
